# kindred

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .golangci.yml  .hadolint.yaml  .shellcheckrc  CLAUDE.local.md  CLAUDE.md  Dockerfile  LICENSE  METRICS_REPORTING_DESIGN.md  README.md  cliff.toml  commitlint.config.js  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  pyproject.toml  ruff.toml
.githooks/: commit-msg  post-merge  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  claude.yml  dependabot-auto-merge.yml.disabled  docs-check.yml  setup-labels.yml
api/: __init__.py  dependencies.py  main.py  settings.py
api/routers/: __init__.py  debug.py  metrics.py  requests.py  scenarios.py  social_graph.py  solver.py  validation.py
api/schemas/: __init__.py  admin.py  bunk_requests.py  config.py  debug.py  manual_review.py  metrics.py  social_graph.py  solver.py  validation.py
api/services/: __init__.py  breakdown_calculator.py  comparison_service.py  data_fetcher.py  drilldown_service.py  extractors.py  historical_service.py  id_cache.py  metrics_repository.py  registration_service.py  retention_service.py  retention_trends_service.py  session_context.py  session_utils.py  solver_runner.py  test_breakdown_calculator.py  test_comparison_service.py  test_drilldown_service.py  test_historical_service.py  test_metrics_repository.py  test_registration_service.py  test_retention_service.py  test_retention_trends_service.py
api/utils/: __init__.py  session_metrics.py
bunking/: __init__.py  auth_middleware.py  branding.py  bunking_validator.py  direct_solver.py  jwt_auth.py  logging_config.py  models.py  models_v2.py  uvicorn_logging.py
bunking/config/: __init__.py  errors.py  loader.py  schema.py  types.py
bunking/graph/: __init__.py  graph_cache_manager.py  optimized_graph_builder.py  social_graph_builder.py
bunking/metrics/: __init__.py  camper_history.py  compute_camper_history.py
bunking/solver/: __init__.py  bunk_ordering.py  callbacks.py  direct_solver.py  feasibility.py  logging.py  objective_evaluator.py  score_evaluator.py  solution.py
bunking/sync/: base_sync.py  collected_request.py  conflict_detector.py  csv_field_history_tracker.py  sync_logging.py  sync_result_parser.py
bunking/utils/: age_preference.py
campminder/: client.py
config/: branding.json  branding.local.json  sheets_export.example.json  sheets_sharing.example.json  staff_list.example.json  staff_list.json
config/prompts/: disambiguate.txt  parse_bunk_with.txt  parse_bunking_notes.txt  parse_internal_notes.txt  parse_not_bunk_with.txt  parse_request.txt
docker/: Caddyfile  combined-entrypoint.sh  supervisord.conf
docs/: README.md  investigation-not-bunk-with-bug.md
docs/api/: solver-api.md
docs/architecture/: data-model.md
docs/camp/: custom_field_values_2025.md  metrics_reporting_design.md
docs/features/: bunk_request_business_rules.md  request-types-specification.md
docs/guides/: csv-preparation.md  docker-deployment.md  solver-configuration.md  troubleshooting.md
docs/reference/: cli-commands.md  configuration.md  tables.md
frontend/: .gitignore  Caddyfile  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.local.example.ts  vite.config.local.ts  vite.config.ts  vitest.config.ts
frontend/scripts/: dev.js  fix-css-infinity.js  generate-types.js  performance-report.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
pocketbase/: eslint.config.js  go.mod  go.sum  main.go  package-lock.json  package.json
pocketbase/campminder/: client.go  client_test.go
pocketbase/google/: branding.go  branding_test.go  client.go  client_test.go  drive.go  drive_test.go
pocketbase/logging/: logger.go  logger_test.go
pocketbase/pb_hooks/: config.js
pocketbase/pb_migrations/: 1499999996_person_tag_defs.js  1499999997_households.js  1499999998_divisions.js  1500000001_camp_sessions.js  1500000001_person_tag_defs.js  1500000002_custom_field_defs.js  1500000002_persons.js  1500000003_bunks.js  1500000003_households.js  1500000004_attendees.js  1500000004_divisions.js  1500000005_bunk_plans.js  1500000005_session_groups.js  1500000006_bunk_requests.js  1500000006_bunks.js  1500000007_bunk_assignments.js  1500000007_staff_program_areas.js  1500000008_saved_scenarios.js  1500000008_staff_org_categories.js  1500000009_bunk_assignments_draft.js  1500000009_financial_categories.js  1500000010_payment_methods.js  1500000010_solver_runs.js  (+112 more)
scripts/: create_admin.sh  deploy-bunking-from-host.sh  deploy_production.sh  full_reset.sh  local_docker_test.sh  prepare_for_new_year.py  release.sh  request_stats.py  reset_and_migrate.sh  reset_migrations.sh  rollback.sh  run_tests.py  setup-git-hooks.sh  start_dev.sh  start_pocketbase_with_oauth.sh  update_solver_fairness_config.py  vault.config  vault.config.example  wait_for_healthy.sh
tests/: conftest.py  test_metrics_retention.py
(+745 files in other folders)
